--- a/build.gradle
+++ b/build.gradle
@@ -101,15 +101,17 @@ dependencies {
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
     
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+    implementation 'org.spongepowered:mixin:0.8.5'
     
     implementation(
-            'org.spongepowered:mixin:0.8.5:processor',
-            
-            fg.deobf("vazkii.autoreglib:AutoRegLib:1.3-32.+"),
-            fg.deobf("vazkii.quark:Quark:r1.6-+"),
-            
             fg.deobf("CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-+")
     )
+    
+    compileOnly(
+            fg.deobf("curse.maven:BloodMagic-224791:2822288")
+    ) {
+        because "Mixins applied to these mods."
+    }
     
     compileOnly(
             fg.deobf("CraftTweaker2:CraftTweaker2-API:4.1.+"),
