--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'wtf.gofancy.fancygradle'
 apply plugin: 'org.spongepowered.mixin'
+apply plugin: 'idea'
 
 group = 'org.btpos.dj2addons'
 version = '1.0'
@@ -119,6 +120,12 @@ dependencies {
             fg.deobf("curse.maven:GuideAPI-228832:2645992"),
     )
     
+    compileOnly(
+            fg.deobf("curse.maven:Bewitchment-285439:3256343"),
+            fg.deobf("curse.maven:MoreTweaker-336569:3226142"),
+            fg.deobf("curse.maven:MTLib-253211:3308160")
+    )
+    
     
     compileOnly(
             fg.deobf("CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-+"),
@@ -146,7 +153,7 @@ jar {
                 "Implementation-Version"  : project.jar.archiveVersion,
                 "Implementation-Vendor"   : "ByThePowerOfScience",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-
+                
                 "FMLCorePluginContainsFMLMod": "true",
                 "FMLCorePlugin"              : "org.btpos.dj2addons.bootstrapper.core.DJ2ALoadingPlugin",
                 "TweakClass"                 : "org.spongepowered.asm.launch.MixinTweaker",
@@ -168,6 +175,13 @@ mixin {
     
     debug.verbose = true
     debug.export = true
+}
+
+idea {
+    module {
+        downloadSources = false
+        downloadJavadoc = true
+    }
 }
 
 jar.finalizedBy('reobfJar')
