--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,9 @@ buildscript {
             name 'FancyGradle'
             url 'https://gitlab.com/api/v4/projects/26758973/packages/maven'
         }
-        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
+        maven {
+            url = 'https://repo.spongepowered.org/repository/maven-public/'
+        }
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
@@ -16,10 +18,16 @@ buildscript {
     }
 }
 
+plugins {
+    id 'org.jetbrains.kotlin.jvm' version "1.6.20"
+}
+
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'wtf.gofancy.fancygradle'
 apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'idea'
+
+
 
 group = 'org.btpos.dj2addons'
 version = '1.0'
@@ -37,6 +45,7 @@ minecraft {
     runs {
         client {
             args '--username', 'Dev'
+            jvmArgs "-Dfml.coreMods.load=${project.coremods}"
             
             workingDirectory project.file('run')
             
@@ -101,6 +110,8 @@ repositories {
 }
 
 dependencies {
+    runtimeOnly gradleApi()
+    
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
     
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
@@ -110,7 +121,9 @@ dependencies {
             fg.deobf("curse.maven:Forgelin-248453:2785465"),
             fg.deobf("curse.maven:TeslaCoreLib-254602:3438487"),
             fg.deobf("curse.maven:IndustrialForegoing-266515:2745321"),
-            
+    )
+    
+    implementation(
             fg.deobf("curse.maven:AgriCraft-225635:3317747"),
             fg.deobf("curse.maven:InfinityLib-251396:3317119")
     )
@@ -161,17 +174,29 @@ jar {
         ])
     }
 }
+jar.finalizedBy('reobfJar')
+
+
+task getCoreMods(type: Exec) {
+    commandLine 'python3', 'GetCoreMods.py'
+}
+
+processResources {
+    dependsOn('getCoreMods')
+}
+
 
 fancyGradle {
     patches {
         resources
         coremods
+        asm
     }
 }
 
 mixin {
     add sourceSets.main, 'mixins.dj2addons.refmap.json'
-    config 'mixins.dj2addons.json'
+    //config 'mixins.dj2addons.json'
     
     debug.verbose = true
     debug.export = true
@@ -184,4 +209,4 @@ idea {
     }
 }
 
-jar.finalizedBy('reobfJar')
+
