Wrote script to generate modpack instance instead of using IDE to test. Because Forge.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-coremods=net.shadowfacts.forgelin.preloader.ForgelinPlugin,noobanidus.mods.erebusfix.core.EFLoadingPlugin,org.btpos.dj2addons.bootstrapper.core.DJ2ALoadingPlugin
+coremods=net.shadowfacts.forgelin.preloader.ForgelinPlugin,com.bewitchment.core.BewitchmentFMLLoadingPlugin,noobanidus.mods.erebusfix.core.EFLoadingPlugin,org.btpos.dj2addons.bootstrapper.core.DJ2ALoadingPlugin
