--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'idea'
 
 
 group = 'org.btpos.dj2addons'
-version = '1.0'
+version = '1.0.1'
 
 java {
     archivesBaseName = 'dj2addons'
@@ -85,6 +85,10 @@ repositories {
             includeGroup "curse.maven"
         }
     }
+    maven {
+        name = "CoFH Maven"
+        url = "https://maven.covers1624.net"
+    }
 }
 
 dependencies {
@@ -95,18 +99,18 @@ dependencies {
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     compileOnly 'org.spongepowered:mixin:0.8.5'
     
-    implementation(
+    compileOnly(
             fg.deobf("curse.maven:Forgelin-248453:2785465"),
             fg.deobf("curse.maven:TeslaCoreLib-254602:3438487"),
             fg.deobf("curse.maven:IndustrialForegoing-266515:2745321"),
     )
     
-    implementation(
+    compileOnly(
             fg.deobf("curse.maven:AgriCraft-225635:3317747"),
             fg.deobf("curse.maven:InfinityLib-251396:3317119")
     )
     
-    implementation(
+    compileOnly(
             fg.deobf("curse.maven:BloodMagic-224791:2822288"),
             fg.deobf("curse.maven:GuideAPI-228832:2645992"),
     )
@@ -117,24 +121,33 @@ dependencies {
             fg.deobf("curse.maven:MTLib-253211:3308160")
     )
     
-    implementation(
+    compileOnly(
             fg.deobf("curse.maven:Patchouli-306770:3162874"),
-            fg.deobf("curse.maven:Baubles-227083:2518667")
+            fg.deobf("curse.maven:Baubles-227083:2518667"),
+            fg.deobf("curse.maven:Roots-246183:3484394"),
+            fg.deobf("curse.maven:MysticalWorld-282940:3460961"),
+            fg.deobf("curse.maven:MysticalLib-277064:3483816")
     )
-    
-    runtimeOnly(fg.deobf("curse.maven:Erebus-220698:3211974"))
     
     compileOnly(
-            fg.deobf("CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-+"),
-            fg.deobf("CraftTweaker2:CraftTweaker2-API:4.1.+"),
-            fg.deobf("CraftTweaker2:ZenScript:4.1.+")
+            fg.deobf("curse.maven:EnderIO-64578:3328811"),
+            fg.deobf("curse.maven:ProjectIntelligence-306028:2833640"),
+            fg.deobf("curse.maven:EnderCore-231868:2972849"),
+            fg.deobf("curse.maven:BrandonsCore-231382:3408276"),
+            fg.deobf("curse.maven:CodeChickenLib-242818:2779848"),
+            "cofh:RedstoneFlux:1.12-2.0.0.1:universal"
     )
     
+//    implementation(
+//            fg.deobf("curse.maven:Aether-255308:3280119")
+//    )
+    
+    implementation("CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-+")
+    
+    runtimeOnly(fg.deobf("curse.maven:Erebus-220698:3211974"))
     runtimeOnly(fg.deobf("curse.maven:ErebusFix-400488:3024769")) {
         because "Shades Mixin library."
     }
-    
-//    implementation(fg.deobf("curse.maven:CraftTweaker-239197:3642364"))
 }
 
 jar {
@@ -151,7 +164,7 @@ jar {
                 "FMLCorePluginContainsFMLMod": "true",
                 "FMLCorePlugin"              : "org.btpos.dj2addons.bootstrapper.core.DJ2ALoadingPlugin",
                 "TweakClass"                 : "org.spongepowered.asm.launch.MixinTweaker",
-                "ForceLoadAsMod": "true"
+                "ForceLoadAsMod"             : "true"
         ])
     }
 }
@@ -170,6 +183,7 @@ fancyGradle {
         resources
         coremods
         asm
+        codeChickenLib
     }
 }
 
