--- a/build.gradle
+++ b/build.gradle
@@ -109,7 +109,7 @@ dependencies {
             fg.deobf("curse.maven:TeslaCoreLib-254602:3438487"),
             fg.deobf("curse.maven:IndustrialForegoing-266515:2745321"),
     )
-
+    
     compileOnly(
             fg.deobf("curse.maven:AgriCraft-225635:3317747"),
             fg.deobf("curse.maven:InfinityLib-251396:3317119")
@@ -120,7 +120,7 @@ dependencies {
             fg.deobf("curse.maven:GuideAPI-228832:2645992"),
     )
 
-    compileOnly(
+    implementation(
             fg.deobf("curse.maven:Bewitchment-285439:3256343"),
             fg.deobf("curse.maven:MoreTweaker-336569:3226142"),
             fg.deobf("curse.maven:MTLib-253211:3308160")
@@ -131,7 +131,9 @@ dependencies {
             fg.deobf("curse.maven:Patchouli-306770:3162874"),
             fg.deobf("curse.maven:Baubles-227083:2518667"),
     )
-
+    
+    runtimeOnly fg.deobf("curse.maven:Roots-246183:3484394")
+    
     compileOnly(
             fg.deobf("curse.maven:Roots-246183:3484394"),
             fg.deobf("curse.maven:MysticalWorld-282940:3460961"),
@@ -151,7 +153,7 @@ dependencies {
             fg.deobf("curse.maven:Botania-225643:3330934")
     )
 
-    implementation(
+    compileOnly(
             fg.deobf("curse.maven:Aether-255308:3280119")
     )
 
@@ -165,7 +167,13 @@ dependencies {
     }
 }
 
+task copyTestZS(type: Copy) {
+    from "./" include "Test.zs" into "./run/scripts"
+}
+
 processResources {
+    dependsOn(copyTestZS)
+    
     // this will ensure that this task is redone when the versions change.
     inputs.property "version", project.version
     inputs.property "mcversion", project.version_mc
@@ -189,10 +197,10 @@ jar {
                 "Implementation-Vendor"   : "ByThePowerOfScience",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                 
-                "FMLCorePluginContainsFMLMod": "true",
-                "FMLCorePlugin"              : "org.btpos.dj2addons.bootstrapper.core.DJ2ALoadingPlugin",
-                "TweakClass"                 : "org.spongepowered.asm.launch.MixinTweaker",
-                "ForceLoadAsMod"             : "true"
+//                "FMLCorePluginContainsFMLMod": "true",
+//                "FMLCorePlugin"              : "org.btpos.dj2addons.bootstrapper.core.DJ2ALoadingPlugin",
+//                "TweakClass"                 : "org.spongepowered.asm.launch.MixinTweaker",
+//                "ForceLoadAsMod"             : "true"
         ])
     }
     metaInf {
@@ -220,12 +228,13 @@ fancyGradle {
 }
 
 mixin {
-    add sourceSets.main, 'mixins.dj2addons.refmap.json'
+//    add sourceSets.main, 'mixins.dj2addons.refmap.json'
     config 'mixins.dj2addons.loader.json'
 //    config 'mixins.dj2addons.json'
 
     debug.verbose = true
     debug.export = true
+    setHotSwap(true)
 }
 
 idea {
