--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ task gitChangelogTask(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask
 }
 
 group = 'org.btpos.dj2addons'
-version = '1.1.0'
+version = '1.1.1'
 project.ext.version_mc = "${version_minecraft}-${version_forge}"
 
 java {
@@ -214,6 +214,11 @@ task updateModpack(type: Exec, group: 'buildruns') {
     commandLine("python3", "./python/UpdateModpack.py")
 }
 
+task updateCFModpack(type: Exec, group: 'buildruns') {
+    dependsOn(build)
+    commandLine("python3", "./python/UpdateCFModpack.py")
+}
+
 task copyTestZS(type: Copy) {
     from "./" include "Test.zs" into "./run/scripts"
 }
@@ -253,10 +258,10 @@ jar {
                 "Implementation-Vendor"   : "ByThePowerOfScience",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                 
-//                "FMLCorePluginContainsFMLMod": "true",
-//                "FMLCorePlugin"              : "org.btpos.dj2addons.bootstrapper.core.DJ2ALoadingPlugin",
-//                "TweakClass"                 : "org.spongepowered.asm.launch.MixinTweaker",
-//                "ForceLoadAsMod"             : "true"
+                "FMLCorePluginContainsFMLMod": "true",
+                "FMLCorePlugin"              : "org.btpos.dj2addons.bootstrapper.core.DJ2ALoadingPlugin",
+                "TweakClass"                 : "org.spongepowered.asm.launch.MixinTweaker",
+                "ForceLoadAsMod"             : "true"
         ])
     }
 //    metaInf {
@@ -280,7 +285,7 @@ mixin {
     add sourceSets.main, 'mixins.dj2addons.refmap.json'
     
     config 'mixins.dj2addons.preinit.json'
-    config 'mixins.dj2addons.loader.json'
+    //config 'mixins.dj2addons.loader.json'
 //    config 'mixins.dj2addons.json'
 
     debug.verbose = true
