--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+coremods=org.btpos.dj2addons.bootstrapper.core.DJ2ALoadingPlugin
 
 
 version_minecraft=1.12.2
